# daikin-homekit

./: Cargo.toml  README.md  daikin-homekit.service  daikin-matter.service
.github/workflows/: build.yml  release.yml
daikin-client/: Cargo.toml
daikin-client/examples/: compatibility_check.rs  discovery.rs  get_status.rs
daikin-client/src/: client.rs  discovery.rs  lib.rs
dsiot/: Cargo.toml
dsiot/src/: constraints.rs  daikin.rs  info.rs  lib.rs  macros.rs  mapping.rs  property.rs  request.rs  response.rs  state.rs  status.rs  temperature.rs
dsiot/src/fixtures/: info.json  status.json  update.json
dsiot/src/protocol/: client.rs  info.rs  macros.rs  mod.rs  property.rs  request.rs  response.rs  status.rs
dsiot/src/types/: mod.rs  mode.rs  wind.rs
examples/: compatibility_check.rs  discovery.rs  get_status.rs
homekit/: Cargo.toml
homekit/examples/: compatibility_check.rs  discovery.rs
homekit/src/: characteristic.rs  client.rs  discovery.rs  fan_mapping.rs  lib.rs  main.rs  mode_mapping.rs
matter/: Cargo.toml
matter/src/: bridge.rs  bridged_info.rs  device.rs  fan_control.rs  humidity.rs  identify.rs  main.rs  onoff.rs  power.rs  thermostat.rs  wifi_diag.rs
src/: characteristic.rs  client.rs  daikin.rs  discovery.rs  error.rs  info.rs  lib.rs  macros.rs  main.rs  property.rs  request.rs  response.rs  status.rs
src/fixtures/: update.json
