[package]
name = "daikin-homekit"
version = "0.1.2"
edition = "2021"
authors = ["mzyy94"]
rust-version = "1.71"
description = "Control Daikin Air Conditioner via HomeKit"
repository = "https://github.com/mzyy94/daikin-homekit/"
license = "GPL-3.0"
keywords = ["daikin", "homekit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
dirs = "6.0.0"
env_logger = "0.11.8"
form_urlencoded = "1.2.1"
futures = "0.3.31"
genawaiter = { version = "0.99.1", features = ["futures03"] }
hap = { git = "https://github.com/suzuke/hap-rs", version = "0.1.0-pre.15" }
hex = "0.4.3"
log = "0.4.27"
network-interface = "2.0.1"
openssl = "0.10.73"
reqwest = { version = "0.12.20", features = ["json"] }
retainer = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
