[package]
name = "daikin-homekit"
version = "0.1.3"
edition = "2021"
authors = ["mzyy94"]
rust-version = "1.86"
description = "Control Daikin Air Conditioner via HomeKit"
repository = "https://github.com/mzyy94/daikin-homekit/"
license = "GPL-3.0"
keywords = ["daikin", "homekit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
byteorder = "1.5.0"
clap = { version = "4.5.40", features = ["derive", "cargo"] }
dirs = "6.0.0"
env_logger = "0.11.8"
form_urlencoded = "1.2.1"
futures = "0.3.31"
hap = { git = "https://github.com/suzuke/hap-rs", version = "0.1.0-pre.15" }
hex = "0.4.3"
log = "0.4.27"
network-interface = "2.0.1"
openssl = "0.10.73"
reqwest = { version = "0.12.22", features = ["json"] }
retainer = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
