[package]
name = "daikin-homekit"
version = "0.2.1"
edition = "2024"
authors = ["mzyy94"]
rust-version = "1.86"
description = "Control Daikin Air Conditioner via HomeKit"
repository = "https://github.com/mzyy94/daikin-homekit/"
license = "GPL-3.0"
keywords = ["daikin", "homekit"]

[workspace]
members = [".", "dsiot"]

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
clap = { version = "4.5.40", features = ["derive", "cargo"] }
dirs = "6.0.0"
env_logger = "0.11.8"
form_urlencoded = "1.2.1"
futures = "0.3.31"
hap = { git = "https://github.com/mzyy94/hap-rs", branch = "patch-verify" }
log = "0.4.27"
network-interface = "2.0.1"
openssl = "0.10.73"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.15.0"
tokio = { version = "1.46.1", features = ["full"] }
dsiot = { path = "./dsiot", version = "0.1.0" }
async-lock = "3.4.0"
