[package]
name = "daikin-client"
version = "0.1.0"
edition = "2024"
authors = ["mzyy94"]
rust-version = "1.86"
description = "Daikin AC network client library"
license = "GPL-3.0"
keywords = ["daikin", "hvac", "iot"]

[dependencies]
dsiot = { path = "../dsiot", version = "0.1.0" }
anyhow = "1.0.98"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.140"
serde_qs = "0.15.0"
async-lock = "3.4.0"
tokio = { version = "1.47.1", features = ["net", "time"] }
async-stream = "0.3.6"
futures = "0.3.31"
network-interface = "2.0.3"
log = "0.4.27"

[dev-dependencies]
clap = { version = "4.5.46", features = ["derive"] }

[[example]]
name = "get_status"

[[example]]
name = "compatibility_check"

[[example]]
name = "discovery"
