[package]
name = "daikin-client"
version = "0.2.1"
edition = "2024"
authors = ["mzyy94"]
rust-version = "1.95"
description = "Daikin AC network client library"
license = "GPL-3.0"
keywords = ["daikin", "hvac", "iot"]

[dependencies]
dsiot = { path = "../dsiot", version = "0.3.1" }
anyhow = "1.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
serde_qs = "1.1"
async-lock = "3.4.2"
tokio = { version = "1", features = ["net", "time"] }
async-stream = "0.3.6"
futures = "0.3"
network-interface = "2.0.5"
log = "0.4.29"

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }

[[example]]
name = "get_status"

[[example]]
name = "compatibility_check"

[[example]]
name = "discovery"
