[package]
name = "dsiot"
version = "0.1.0"
edition = "2024"
authors = ["mzyy94"]
rust-version = "1.86"
description = "Daikin Smart IoT (dsiot) Protocol Library"
license = "GPL-3.0"
keywords = ["daikin", "dsiot", "iot"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
hex = "0.4.3"
serde_json = "1.0.140"
serde_qs = "0.15.0"
async-lock = "3.4.0"
anyhow = "1.0.98"
