[package]
name = "dsiot"
version = "0.3.1"
edition = "2024"
authors = ["mzyy94"]
rust-version = "1.95"
description = "Daikin Smart IoT (dsiot) Protocol Library"
license = "GPL-3.0"
keywords = ["daikin", "dsiot", "iot"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
hex = "0.4.3"
serde_json = "1.0.149"
serde_qs = "1.1"
async-lock = "3.4.2"
anyhow = "1.0"
