[package]
name = "daikin-matter"
version = "0.3.2"
edition = "2024"
authors = ["mzyy94"]
rust-version = "1.95"
description = "Control Daikin Air Conditioner via Matter"
repository = "https://github.com/mzyy94/daikin-matter/"
license = "GPL-3.0"
keywords = ["daikin", "matter"]

[features]
default = ["astro-dnssd"]
astro-dnssd = ["rs-matter/astro-dnssd"]
avahi = ["rs-matter/zbus"]
builtin-mdns = ["dep:nix", "dep:socket2"]

[dependencies]
anyhow = "1.0"
async-io = "2"
clap = { version = "4.6", features = ["derive", "cargo"] }
dirs = "6"
embassy-futures = "0.1"
embassy-time = { version = "0.5", features = ["std"] }
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
env_logger = "0.11"
futures-lite = "2"
log = "0.4"
rand = "0.8"
static_cell = "2"
tokio = { version = "1", features = ["full"] }
rs-matter = { git = "https://github.com/project-chip/matter-rs", features = ["async-io"] }
nix = { version = "0.31", features = ["net"], optional = true }
socket2 = { version = "0.6", optional = true }
dsiot = { path = "../dsiot", version = "0.3.1" }
daikin-client = { path = "../daikin-client", version = "0.2.1" }
